--- a/objects/index.html
+++ b/objects/index.html
@@ -12,79 +12,77 @@
   <link rel="icon" href="../assets/favicon.ico" type="image/x-icon" />
 </head>
 <body>
-  <header>
-    <nav>
-      <a href="/">about</a>
-      <a href="/archive">archive</a>
-      <a href="/objects">commission</a>
-      <a href="/game">game</a>
-    </nav>
-  </header>
+<header>
+  <nav>
+    <a href="/">about</a>
+    <a href="/archive">archive</a>
+    <a href="/objects">commission</a>
+    <a href="/game">game</a>
+  </nav>
+</header>
 
-  <main>
-    <h1>commission</h1>
-    <p>you can take these with you. or not.
+<main>
+  <h1>commission</h1>
+  <p>you can take these with you. or not.</p>
 
-<section class="object">
-  <h2>custom canvas</h2>
-  <p>
-    painted from your memory<br>
-    size and mood — we decide together<br>
-    starts at €120<br>
-    payment up front · no edits
-  </p>
-</section>
+  <section class="object">
+    <h2>custom figure</h2>
+    <img src="../assets/figure.jpg" alt="custom monkey figure" class="figure-img"/>
+    <p class="figure-text">
+      small monkey toy, 10 cm tall<br>
+      random color · hand-poured plastic<br>
+      €30 each<br><br>
+      open to other ideas too — <a href="https://instagram.com/evg.damk" class="cta-link" target="_blank">DM me on Instagram</a>
+    </p>
+  </section>
 
-<section class="object">
-  <h2>custom toy</h2>
-  <p>
-    small soft creature<br>
-    sculpted by hand, maybe with eyes<br>
-    starts at €100<br>
-    one of a kind · no corrections
-  </p>
-</section>
+  <section class="object">
+    <h2>custom work</h2>
+    <p>
+      open for custom objects or ideas based on your brief<br>
+      pricing starts at €100<br><br>
+      send me your thoughts — <a href="https://instagram.com/evg.damk" class="cta-link" target="_blank">DM me on Instagram</a>
+    </p>
+  </section>
+</main>
 
-<p>to order — <a href="https://instagram.com/evg.damk">DM me on Instagram</a></p></p>
-  </main>
+<footer>
+  <img src="../assets/monkey1.png" alt="monkey" class="monkey" id="monkey" />
+</footer>
 
-  <footer>
-    <img src="../assets/monkey1.png" alt="monkey" class="monkey" id="monkey" />
-  </footer>
+<script>
+  const monkey = document.getElementById('monkey');
+  const images = ['monkey1.png', 'monkey2.png', 'monkey3.png', 'monkey4.png'];
+  let clickable = true;
 
-  <script>
-    const monkey = document.getElementById('monkey');
-    const images = ['monkey1.png', 'monkey2.png', 'monkey3.png', 'monkey4.png'];
-    let clickable = true;
+  monkey.addEventListener('click', () => {
+    if (!clickable) return;
 
-    monkey.addEventListener('click', () => {
-      if (!clickable) return;
+    const current = monkey.getAttribute('src').split('/').pop();
+    const others = images.filter(img => img !== current);
+    const next = others[Math.floor(Math.random() * others.length)];
 
-      const current = monkey.getAttribute('src').split('/').pop();
-      const others = images.filter(img => img !== current);
-      const next = others[Math.floor(Math.random() * others.length)];
+    const tempImg = new Image();
+    tempImg.onload = () => {
+      monkey.setAttribute('src', '../assets/' + next);
 
-      const tempImg = new Image();
-      tempImg.onload = () => {
-        monkey.setAttribute('src', '../assets/' + next);
+      if (next === 'monkey3.png') {
+        clickable = false;
 
-        if (next === 'monkey3.png') {
-          clickable = false;
+        monkey.style.transition = 'none';
+        monkey.style.transform = 'rotate(0deg) scale(1)';
+        void monkey.offsetWidth;
+        monkey.style.transition = 'transform 1.8s ease-in-out';
+        monkey.style.transform = 'rotate(1440deg) scale(2.5)';
 
-          monkey.style.transition = 'none';
+        setTimeout(() => {
           monkey.style.transform = 'rotate(0deg) scale(1)';
-          void monkey.offsetWidth;
-          monkey.style.transition = 'transform 1.8s ease-in-out';
-          monkey.style.transform = 'rotate(1440deg) scale(2.5)';
-
-          setTimeout(() => {
-            monkey.style.transform = 'rotate(0deg) scale(1)';
-            clickable = true;
-          }, 2000);
-        }
-      };
-      tempImg.src = '../assets/' + next;
-    });
-  </script>
+          clickable = true;
+        }, 2000);
+      }
+    };
+    tempImg.src = '../assets/' + next;
+  });
+</script>
 </body>
 </html>
